--- a/app/views/enforcement/v2/grounds/groundB.html
+++ b/app/views/enforcement/v2/grounds/groundB.html
@@ -1,6 +1,6 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
-{% set title = "Tell us why the supposed breach of planning control should be allowed " %}
+{% set title = "Tell us your reasons for choosing Ground B" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
@@ -35,22 +35,22 @@
         {% if data['enforcement-reason-method'] == 'text' %}
 
           <!-- reasons by textarea input -->
-          <!-- reasons by multitext input -->
-          {{ govukTextarea({
-            name: "enforcement-ground-a-reasons",
-            id: "enforcement-ground-a-reasons",
-            label: {
-              text: title,
-              classes: "govuk-label--l",
-              isPageHeading: true
-            },
-            hint: {
-              text: "You do not need to repeat the local planning department’s reasons for issuing the enforcement notice."
-            }
-          }) }}
+          <div class="govuk-form-group">
+            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="enforcement-ground-b-reasons">
+                {{ title }}
+              </label>
+            </h1>
+            <div class="govuk-inset-text">
+               The supposed breach of planning control never happened, or is not being used in the way that the local planning department says it is.
+            </div>
+            <div id="enforcement-ground-b-reasons-hint" class="govuk-hint">
+              You do not need to repeat the local planning department’s reasons for issuing the enforcement notice.
+            </div>
+            <textarea class="govuk-textarea" id="enforcement-ground-b-reasons" name="enforcement-ground-b-reasons" rows="5" aria-describedby="enforcement-ground-b-reasons-hint"></textarea>
+          </div>
 
           <p class="govuk-body">
-            <a href="groundA?enforcement-reason-method=file" class="govuk-link">
+            <a href="groundB?enforcement-reason-method=file" class="govuk-link">
               Upload your reasons in a document
             </a>
           </p>
@@ -58,19 +58,21 @@
         {% else %}
 
           <!-- reasons by file -->
-          <label class="govuk-label govuk-label--l" for="enforcement-ground-a-reasons">
+          <label class="govuk-label govuk-label--l" for="enforcement-ground-b-reasons">
             {{ title  }}
           </label>
-
+          <div class="govuk-inset-text">
+             The supposed breach of planning control never happened, or is not being used in the way that the local planning department says it is.
+          </div>
           <p class="govuk-hint">
             You do not need to repeat the local planning department’s reasons for issuing the enforcement notice.
           <p>
 
           <!-- upload files -->
-          <label class="govuk-label govuk-label--m" for="enforcement-ground-a-reasons">
+          <label class="govuk-label govuk-label--m" for="enforcement-ground-b-reasons">
             Drag and drop or choose files
           </label>
-          <input class="govuk-file-upload pins-file-upload" id="enforcement-ground-a-reasons" name="enforcement-ground-a-reasons" type="file" multiple>
+          <input class="govuk-file-upload pins-file-upload" id="enforcement-ground-b-reasons" name="enforcement-ground-b-reasons" type="file" multiple>
 
         </div>
 
@@ -98,7 +100,7 @@
         }) }}
 
         <p class="govuk-body">
-          <a href="groundA?enforcement-reason-method=text" class="govuk-link">
+          <a href="groundB?enforcement-reason-method=text" class="govuk-link">
             Explain your reasons using a text box
           </a>
         </p>
@@ -106,12 +108,7 @@
       {% endif %}
 
       <!-- route user based on what they selected -->
-      {% if data['grounds-2'] %}
-        {{ govukButton({
-          href: "groundB",
-          text: "Continue"
-        }) }}
-      {% elif data['grounds-3'] %}
+      {% if data['grounds-3'] %}
         {{ govukButton({
           href: "groundC",
           text: "Continue"
@@ -142,8 +139,6 @@
           text: "Continue"
         }) }}
       {% endif %}
-
-
 
     </form>
 
