Small fixes to v1 enforcement prototype

--- a/app/views/enforcement/v1/grounds/application-decision.html
+++ b/app/views/enforcement/v1/grounds/application-decision.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% set title = "Have you received a decision from the local planning department about your retrospective planning application?" %}
+{% set title = "Have you received a decision from the local planning department about your planning application?" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
