Fixed the versioning for enforcements v2 (hopefully)

--- a/app/views/enforcement/v2/additional-people/additional-people.html
+++ b/app/views/enforcement/v2/additional-people/additional-people.html
@@ -24,7 +24,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="/additionalpeople" method="post">
+    <form method="post">
 
       <span class="govuk-caption-l">
         Tell us about any additional people
