--- a/app/views/enforcement/v2/contact-details/who-are-you.html
+++ b/app/views/enforcement/v2/contact-details/who-are-you.html
@@ -27,7 +27,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="/whoareyou" method="post">
+    <form method="post">
 
       <span class="govuk-caption-l">
         Provide your contact details
