--- a/app/views/enforcement/v2/grounds/application-decision.html
+++ b/app/views/enforcement/v2/grounds/application-decision.html
@@ -27,7 +27,7 @@
       {% if data['grounds-1'] %}
         <form action="fees" method="post">
       {% else %}
-        <form action="/endgrounds" method="post">
+        <form method="post">
       {% endif %}
 
         <span class="govuk-caption-l">
