--- a/app/views/enforcement/v2/task-list.html
+++ b/app/views/enforcement/v2/task-list.html
@@ -120,7 +120,7 @@
           <!-- grounds of appeal -->
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
-              <a href="grounds/grounds-empty">
+              <a href="grounds/grounds">
                 <!-- Choose your grounds of appeal -->
                 Choose your grounds of appeal
               </a>
