--- a/app/views/enforcement/v2/grounds/application.html
+++ b/app/views/enforcement/v2/grounds/application.html
@@ -27,7 +27,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="/application" method="post">
+    <form method="post">
 
       <span class="govuk-caption-l">
         Choose your grounds of appeal
