--- a/app/views/enforcement/v2/procedure/procedure.html
+++ b/app/views/enforcement/v2/procedure/procedure.html
@@ -27,7 +27,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="/enforcementprocedure" method="post">
+    <form method="post">
 
       <span class="govuk-caption-l">
         Tell us how you would prefer us to decide your appeal
