--- a/app/views/enforcement/v2/upload/enforcement-notice.html
+++ b/app/views/enforcement/v2/upload/enforcement-notice.html
@@ -26,7 +26,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="/enforcementnotice" method="post">
+    <form method="post">
 
       <span class="govuk-caption-l">
         Upload documents for your appeal
