--- a/app/views/enforcement/v2/upload/planning-obligation.html
+++ b/app/views/enforcement/v2/upload/planning-obligation.html
@@ -64,7 +64,7 @@
         </summary>
         <div class="govuk-details__text">
           <p class="govuk-body">
-            A planning obligation is a legal agreement linked to your planning permission. It confirms that you agree to do or not do something if your development goes ahead. This is usually to help manage your development's impact on the area.
+            A planning obligation is a legal agreement linked to your planning permission. It confirms that you agree to do or not do something if your development goes ahead. This is usually to help manage your development’s impact on the area.
           </p>
           <p class="govuk-body">
             For example, you might agree to:
