--- a/app/views/enforcement/v2/declaration.html
+++ b/app/views/enforcement/v2/declaration.html
@@ -41,12 +41,12 @@
         <p>
         <ul class="govuk-list govuk-list--bullet">
           <li>this is your only opportunity to submit the appeal</li>
-          <li>if you have not included all the information we've requested, we may not be able to progress your appeal</li>
+          <li>if you have not included all the information we’ve requested, we may not be able to progress your appeal</li>
           <li>we will contact you about any missing information, but this may delay your appeal​</li>
           <li>you can change your selected grounds of appeal up to 6 weeks after submitting your appeal. To do this, contact <a href="" class="govuk-link">enquiries@planninginspectorate.gov.uk</a></li>
         </ul>
         <p class="govuk-body">
-          You also confirm that you've completed all sections and the details are correct to the best of your knowledge.
+          You also confirm that you’ve completed all sections and the details are correct to the best of your knowledge.
         <p>
 
         <div class="govuk-inset-text">
