--- a/app/views/enforcement/v2/grounds/grounds.html
+++ b/app/views/enforcement/v2/grounds/grounds.html
@@ -1,6 +1,6 @@
 {% extends "layouts/appellant-submission/v11.html" %}
 
-{% set title = "Which statements apply to your case?" %}
+{% set title = "Which grounds apply to your case?" %}
 
 {% block pageTitle %}
   {{title}} - Tell us about the appeal site - GOV.UK
@@ -26,76 +26,81 @@
 
       <form method="post">
 
-        <span class="govuk-caption-l">
-          Choose your grounds of appeal
-        </span>
+        {{ govukCheckboxes({
+          idPrefix: 'grounds',
+          name: 'grounds',
+          classes: '',
+          fieldset: {
+            legend: {
+              html: '<span class="govuk-caption-l">Choose your grounds of appeal</span>'+title,
+              isPageHeading: true,
+              classes: 'govuk-fieldset__legend--l'
+            }
+          },
+          hint: {
+            text: 'Select all that apply.'
+          },
+          items: [
+            {
+              html: '<span class="govuk-!-font-weight-bold">Ground A</span>',
+              value: 'Ground A',
+              hint: {
+                html: 'The supposed breach of planning control should be allowed'
+              },
+              checked: checked('grounds','Ground A')
+            },
+            {
+              html: '<span class="govuk-!-font-weight-bold">Ground B</span>',
+              value: 'Ground B',
+              hint: {
+                html: 'The supposed breach of planning control never happened, or is not being used in the way that the local planning department says it is'
+              },
+              checked: checked('grounds','Ground B')
+            },
+            {
+              html: '<span class="govuk-!-font-weight-bold">Ground C</span>',
+              value: 'Ground C',
+              hint: {
+                html: 'The supposed breach of planning control does not need planning permission'
+              },
+              checked: checked('grounds','Ground C')
+            },
+            {
+              html: '<span class="govuk-!-font-weight-bold">Ground D</span>',
+              value: 'Ground D',
+              hint: {
+                html: 'The local planning department missed its deadline to take action'
+              },
+              checked: checked('grounds','Ground D')
+            },
+            {
+              html: '<span class="govuk-!-font-weight-bold">Ground E</span>',
+              value: 'Ground E',
+              hint: {
+                html: 'The local planning department did not serve copies of the enforcement notice as they&rsquo;re legally required to'
+              },
+              checked: checked('grounds','Ground E')
+            },
+            {
+              html: '<span class="govuk-!-font-weight-bold">Ground F</span>',
+              value: 'Ground F',
+              hint: {
+                html: 'There&rsquo;s more work to do than is needed to undo the supposed breach of planning control'
+              },
+              checked: checked('grounds','Ground F')
+            },
+            {
+              html: '<span class="govuk-!-font-weight-bold">Ground G</span>',
+              value: 'Ground G',
+              hint: {
+                html: 'More time is needed to undo the supposed breach of planning control'
+              },
+              checked: checked('grounds','Ground G')
+            }
+          ]
+        }) }}
 
-        <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-              <h1 class="govuk-fieldset__heading">
-                {{ title }}
-              </h1>
-            </legend>
 
-            <p class="govuk-hint">
-              Select all that apply.
-            </p>
-
-            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="grounds-1" name="grounds-1" type="checkbox" value="groundA">
-                <label class="govuk-label govuk-checkboxes__label" for="grounds-1">
-                  <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground A</span>
-                  The supposed breach of planning control should be allowed
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="grounds-2" name="grounds-2" type="checkbox" value="groundB">
-                <label class="govuk-label govuk-checkboxes__label" for="grounds-2">
-                  <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground B</span>
-                  The supposed breach of planning control never happened, or is not being used in the way that the local planning department says it is
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="grounds-3" name="grounds-3" type="checkbox" value="groundC">
-                <label class="govuk-label govuk-checkboxes__label" for="grounds-3">
-                  <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground C</span>
-                  The supposed breach of planning control does not need planning permission
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="grounds-4" name="grounds-4" type="checkbox" value="groundD">
-                <label class="govuk-label govuk-checkboxes__label" for="grounds-4">
-                  <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground D</span>
-                  The local planning department missed its deadline to take action
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="grounds-5" name="grounds-5" type="checkbox" value="groundE">
-                <label class="govuk-label govuk-checkboxes__label" for="grounds-5">
-                  <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground E</span>
-                  The local planning department did not serve copies of the enforcement notice as they’re legally required to
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="grounds-6" name="grounds-6" type="checkbox" value="groundF">
-                <label class="govuk-label govuk-checkboxes__label" for="grounds-6">
-                  <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground F</span>
-                  There’s more work to do than is needed to undo the supposed breach of planning control
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="grounds-7" name="grounds-7" type="checkbox" value="groundG">
-                <label class="govuk-label govuk-checkboxes__label" for="grounds-7">
-                  <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground G</span>
-                  More time is needed to undo the supposed breach of planning control
-                </label>
-              </div>
-            </div>
-
-          </fieldset>
-        </div>
 
         {{ govukButton({
           text: "Continue"
