Content tweaks to show ground explanations and fix routes to always show fee questions

--- a/app/views/enforcement/v2/contact-details/named-on-notice.html
+++ b/app/views/enforcement/v2/contact-details/named-on-notice.html
@@ -37,7 +37,7 @@
 
         {{ govukInput({
           label: {
-            text: "The name on the enforcement notice",
+            text: "Name on the enforcement notice",
             classes: "govuk-label",
             isPageHeading: false
           },
@@ -51,7 +51,7 @@
 
         {{ govukInput({
           label: {
-            text: "The name on the enforcement notice",
+            text: "Company name on the enforcement notice",
             classes: "govuk-label",
             isPageHeading: false
           },
