--- a/app/views/enforcement/v2/grounds/grounds.html
+++ b/app/views/enforcement/v2/grounds/grounds.html
@@ -42,60 +42,39 @@
           },
           items: [
             {
-              html: '<span class="govuk-!-font-weight-bold">Ground A</span>',
-              value: 'Ground A',
-              hint: {
-                html: 'The supposed breach of planning control should be allowed'
-              },
-              checked: checked('grounds','Ground A')
+              html: '<span class="govuk-!-font-weight-bold">Ground A:</span> The supposed breach of planning control should be allowed',
+              value: '<span class="govuk-!-font-weight-bold">Ground A:</span> The supposed breach of planning control should be allowed',
+              checked: checked('grounds','<span class="govuk-!-font-weight-bold">Ground A:</span> The supposed breach of planning control should be allowed')
             },
             {
-              html: '<span class="govuk-!-font-weight-bold">Ground B</span>',
-              value: 'Ground B',
-              hint: {
-                html: 'The supposed breach of planning control never happened, or is not being used in the way that the local planning department says it is'
-              },
-              checked: checked('grounds','Ground B')
+              html: '<span class="govuk-!-font-weight-bold">Ground B:</span> The supposed breach of planning control never happened, or is not being used in the way that the local planning department says it is',
+              value: '<span class="govuk-!-font-weight-bold">Ground B:</span> The supposed breach of planning control never happened, or is not being used in the way that the local planning department says it is',
+              checked: checked('grounds','<span class="govuk-!-font-weight-bold">Ground B:</span> The supposed breach of planning control never happened, or is not being used in the way that the local planning department says it is')
             },
             {
-              html: '<span class="govuk-!-font-weight-bold">Ground C</span>',
-              value: 'Ground C',
-              hint: {
-                html: 'The supposed breach of planning control does not need planning permission'
-              },
-              checked: checked('grounds','Ground C')
+              html: '<span class="govuk-!-font-weight-bold">Ground C:</span> The supposed breach of planning control does not need planning permission',
+              value: '<span class="govuk-!-font-weight-bold">Ground C:</span> The supposed breach of planning control does not need planning permission',
+              checked: checked('grounds','<span class="govuk-!-font-weight-bold">Ground C:</span> The supposed breach of planning control does not need planning permission')
             },
             {
-              html: '<span class="govuk-!-font-weight-bold">Ground D</span>',
-              value: 'Ground D',
-              hint: {
-                html: 'The local planning department missed its deadline to take action'
-              },
-              checked: checked('grounds','Ground D')
+              html: '<span class="govuk-!-font-weight-bold">Ground D:</span> The local planning department missed its deadline to take action',
+              value: '<span class="govuk-!-font-weight-bold">Ground D:</span> The local planning department missed its deadline to take action',
+              checked: checked('grounds','<span class="govuk-!-font-weight-bold">Ground D:</span> The local planning department missed its deadline to take action')
             },
             {
-              html: '<span class="govuk-!-font-weight-bold">Ground E</span>',
-              value: 'Ground E',
-              hint: {
-                html: 'The local planning department did not serve copies of the enforcement notice as they&rsquo;re legally required to'
-              },
-              checked: checked('grounds','Ground E')
+              html: '<span class="govuk-!-font-weight-bold">Ground E:</span> The local planning department did not serve copies of the enforcement notice as they&rsquo;re legally required to',
+              value: '<span class="govuk-!-font-weight-bold">Ground E:</span> The local planning department did not serve copies of the enforcement notice as they&rsquo;re legally required to',
+              checked: checked('grounds','<span class="govuk-!-font-weight-bold">Ground E:</span> The local planning department did not serve copies of the enforcement notice as they&rsquo;re legally required to')
             },
             {
-              html: '<span class="govuk-!-font-weight-bold">Ground F</span>',
-              value: 'Ground F',
-              hint: {
-                html: 'There&rsquo;s more work to do than is needed to undo the supposed breach of planning control'
-              },
-              checked: checked('grounds','Ground F')
+              html: '<span class="govuk-!-font-weight-bold">Ground F:</span> There&rsquo;s more work to do than is needed to undo the supposed breach of planning control',
+              value: '<span class="govuk-!-font-weight-bold">Ground F:</span> There&rsquo;s more work to do than is needed to undo the supposed breach of planning control',
+              checked: checked('grounds','<span class="govuk-!-font-weight-bold">Ground F:</span> There&rsquo;s more work to do than is needed to undo the supposed breach of planning control')
             },
             {
-              html: '<span class="govuk-!-font-weight-bold">Ground G</span>',
-              value: 'Ground G',
-              hint: {
-                html: 'More time is needed to undo the supposed breach of planning control'
-              },
-              checked: checked('grounds','Ground G')
+              html: '<span class="govuk-!-font-weight-bold">Ground G:</span> More time is needed to undo the supposed breach of planning control',
+              value: '<span class="govuk-!-font-weight-bold">Ground G:</span> More time is needed to undo the supposed breach of planning control',
+              checked: checked('grounds','<span class="govuk-!-font-weight-bold">Ground G:</span> More time is needed to undo the supposed breach of planning control')
             }
           ]
         }) }}
