--- a/app/views/before-you-start/v11/index.html
+++ b/app/views/before-you-start/v11/index.html
@@ -23,7 +23,8 @@
         Before you start
       </h1>
       <p class="govuk-body">
-        This is a new service. It’s only for appeals about certain local planning departments.
+        This is a new service to appeal a planning decision or an enforcement notice.
+        <!-- This is a new service. It’s only for appeals about certain local planning departments. -->
         <!-- This is a new service. It’s only for appeals about certain local planning departments and planning application types. -->
       </p>
 
