--- a/app/views/enforcement/v2/grounds/fees-exempt.html
+++ b/app/views/enforcement/v2/grounds/fees-exempt.html
@@ -1,4 +1,4 @@
-{% extends "layouts/appellant-submission/v11.html" %}
+{% extends "layout.html" %}
 
 {% set title = "Do you have a reason why you have not paid for planning permission?" %}
 
