--- a/app/views/enforcement/v2/grounds/fees.html
+++ b/app/views/enforcement/v2/grounds/fees.html
@@ -1,4 +1,4 @@
-{% extends "layouts/appellant-submission/v11.html" %}
+{% extends "layout.html" %}
 
 {% set title = "Have you paid the planning permission fee to your local planning department?" %}
 
