--- a/app/views/enforcement/v2/grounds/groundB.html
+++ b/app/views/enforcement/v2/grounds/groundB.html
@@ -1,4 +1,4 @@
-{% extends "layouts/appellant-submission/v11.html" %}
+{% extends "layout.html" %}
 
 {% set title = "Tell us your reasons for choosing Ground B" %}
 
