--- a/app/views/enforcement/v2/grounds/groundC.html
+++ b/app/views/enforcement/v2/grounds/groundC.html
@@ -1,4 +1,4 @@
-{% extends "layouts/appellant-submission/v11.html" %}
+{% extends "layout.html" %}
 
 {% set title = "Tell us why the supposed breach of planning control does not need planning permission" %}
 
