--- a/app/views/enforcement/v2/grounds/groundD.html
+++ b/app/views/enforcement/v2/grounds/groundD.html
@@ -1,4 +1,4 @@
-{% extends "layouts/appellant-submission/v11.html" %}
+{% extends "layout.html" %}
 
 {% set title = "Tell us why you think the local planning department missed its deadline to take action" %}
 
