--- a/app/views/enforcement/v2/grounds/groundE.html
+++ b/app/views/enforcement/v2/grounds/groundE.html
@@ -1,4 +1,4 @@
-{% extends "layouts/appellant-submission/v11.html" %}
+{% extends "layout.html" %}
 
 {% set title = "Tell us why you think the local planning department did not serve copies of the enforcement notice as they’re legally required to" %}
 
