--- a/app/views/enforcement/v2/grounds/groundF.html
+++ b/app/views/enforcement/v2/grounds/groundF.html
@@ -1,4 +1,4 @@
-{% extends "layouts/appellant-submission/v11.html" %}
+{% extends "layout.html" %}
 
 {% set title = "Tell us why you think there’s more work to do than is needed to undo the supposed breach of planning control" %}
 
