--- a/app/views/enforcement/v2/appeal-site/site-visibility.html
+++ b/app/views/enforcement/v2/appeal-site/site-visibility.html
@@ -1,4 +1,4 @@
-{% extends "layouts/appellant-submission/v11.html" %}
+{% extends "layout.html" %}
 
 {% set title = "Is the site visible from a public road?" %}
 
